Completes task 3 of milestone 7 (clean user data)

--- a/read_and_analyse.ipynb
+++ b/read_and_analyse.ipynb
@@ -90,13 +90,12 @@
     }
    ],
    "source": [
-    "\n",
     "'''\n",
     "AiCore Pinterest Data Pipeline Project\n",
     "Load Pinterest data from S3; clean and analyse the data with PySpark.\n",
     "This code is intended to run in a Databricks notebook.\n",
     "Author: Kristina Gorkovskaya\n",
-    "Date: 2023-09-30\n",
+    "Date: 2023-11-03\n",
     "'''\n",
     "\n",
     "import pandas as pd\n",
@@ -1464,9 +1463,335 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "c42412b4-5983-4602-8b3c-797d78fb9f18",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/html": [
+       "<style scoped>\n",
+       "  .ansiout {\n",
+       "    display: block;\n",
+       "    unicode-bidi: embed;\n",
+       "    white-space: pre-wrap;\n",
+       "    word-wrap: break-word;\n",
+       "    word-break: break-all;\n",
+       "    font-family: \"Menlo\", \"Monaco\", \"Consolas\", \"Ubuntu Mono\", \"Source Code Pro\", monospace;\n",
+       "    font-size: 13px;\n",
+       "    color: #555;\n",
+       "    margin-left: 4px;\n",
+       "    line-height: 19px;\n",
+       "  }\n",
+       "</style>\n",
+       "<div class=\"ansiout\">Loading topic 0ec858bf1407.user... 1,904 records loaded.\n",
+       "root\n",
+       "-- age: long (nullable = true)\n",
+       "-- date_joined: string (nullable = true)\n",
+       "-- first_name: string (nullable = true)\n",
+       "-- ind: long (nullable = true)\n",
+       "-- last_name: string (nullable = true)\n",
+       "\n",
+       "</div>"
+      ]
+     },
+     "metadata": {
+      "application/vnd.databricks.v1+output": {
+       "addedWidgets": {},
+       "arguments": {},
+       "data": "<div class=\"ansiout\">Loading topic 0ec858bf1407.user... 1,904 records loaded.\nroot\n |-- age: long (nullable = true)\n |-- date_joined: string (nullable = true)\n |-- first_name: string (nullable = true)\n |-- ind: long (nullable = true)\n |-- last_name: string (nullable = true)\n\n</div>",
+       "datasetInfos": [],
+       "metadata": {},
+       "removedWidgets": [],
+       "type": "html"
+      }
+     },
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#############################################################################################################\n",
+    "# TASK 3: Clean the df_user DataFrame\n",
+    "#############################################################################################################\n",
+    "# Load data from the user topic into df_user.\n",
+    "df_user = load_data('user')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "8de38434-c6f3-4280-b553-49bd781b9d52",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/html": [
+       "<style scoped>\n",
+       "  .ansiout {\n",
+       "    display: block;\n",
+       "    unicode-bidi: embed;\n",
+       "    white-space: pre-wrap;\n",
+       "    word-wrap: break-word;\n",
+       "    word-break: break-all;\n",
+       "    font-family: \"Menlo\", \"Monaco\", \"Consolas\", \"Ubuntu Mono\", \"Source Code Pro\", monospace;\n",
+       "    font-size: 13px;\n",
+       "    color: #555;\n",
+       "    margin-left: 4px;\n",
+       "    line-height: 19px;\n",
+       "  }\n",
+       "</style>\n",
+       "<div class=\"ansiout\">+-----------+---------+---------------------+\n",
+       "first_name |last_name|user_name            |\n",
+       "+-----------+---------+---------------------+\n",
+       "Christopher|Hernandez|Christopher Hernandez|\n",
+       "Christopher|Bradshaw |Christopher Bradshaw |\n",
+       "Alexander  |Cervantes|Alexander Cervantes  |\n",
+       "Christopher|Hamilton |Christopher Hamilton |\n",
+       "Christopher|Bradshaw |Christopher Bradshaw |\n",
+       "Alexander  |Cervantes|Alexander Cervantes  |\n",
+       "Christopher|Hamilton |Christopher Hamilton |\n",
+       "Christopher|Hawkins  |Christopher Hawkins  |\n",
+       "Christopher|Campbell |Christopher Campbell |\n",
+       "Christopher|Anderson |Christopher Anderson |\n",
+       "+-----------+---------+---------------------+\n",
+       "only showing top 10 rows\n",
+       "\n",
+       "</div>"
+      ]
+     },
+     "metadata": {
+      "application/vnd.databricks.v1+output": {
+       "addedWidgets": {},
+       "arguments": {},
+       "data": "<div class=\"ansiout\">+-----------+---------+---------------------+\n|first_name |last_name|user_name            |\n+-----------+---------+---------------------+\n|Christopher|Hernandez|Christopher Hernandez|\n|Christopher|Bradshaw |Christopher Bradshaw |\n|Alexander  |Cervantes|Alexander Cervantes  |\n|Christopher|Hamilton |Christopher Hamilton |\n|Christopher|Bradshaw |Christopher Bradshaw |\n|Alexander  |Cervantes|Alexander Cervantes  |\n|Christopher|Hamilton |Christopher Hamilton |\n|Christopher|Hawkins  |Christopher Hawkins  |\n|Christopher|Campbell |Christopher Campbell |\n|Christopher|Anderson |Christopher Anderson |\n+-----------+---------+---------------------+\nonly showing top 10 rows\n\n</div>",
+       "datasetInfos": [],
+       "metadata": {},
+       "removedWidgets": [],
+       "type": "html"
+      }
+     },
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# (1) Create a new column user_name that concatenates the information found in the first_name and last_name columns.\n",
+    "# Trim and normalize whitespace.\n",
+    "df_user = df_user.withColumn('user_name', F.regexp_replace(F.trim(F.concat_ws(' ', 'first_name', 'last_name')), '\\s+', ' '))\n",
+    "df_user.select('first_name', 'last_name', 'user_name').show(10, truncate=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "7efe33d5-c662-4322-955f-9ebb67821511",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/html": [
+       "<style scoped>\n",
+       "  .ansiout {\n",
+       "    display: block;\n",
+       "    unicode-bidi: embed;\n",
+       "    white-space: pre-wrap;\n",
+       "    word-wrap: break-word;\n",
+       "    word-break: break-all;\n",
+       "    font-family: \"Menlo\", \"Monaco\", \"Consolas\", \"Ubuntu Mono\", \"Source Code Pro\", monospace;\n",
+       "    font-size: 13px;\n",
+       "    color: #555;\n",
+       "    margin-left: 4px;\n",
+       "    line-height: 19px;\n",
+       "  }\n",
+       "</style>\n",
+       "<div class=\"ansiout\">+-------------------+-----+\n",
+       "        date_joined|count|\n",
+       "+-------------------+-----+\n",
+       "9999-99-99 99:99:99| 1904|\n",
+       "+-------------------+-----+\n",
+       "\n",
+       "</div>"
+      ]
+     },
+     "metadata": {
+      "application/vnd.databricks.v1+output": {
+       "addedWidgets": {},
+       "arguments": {},
+       "data": "<div class=\"ansiout\">+-------------------+-----+\n|        date_joined|count|\n+-------------------+-----+\n|9999-99-99 99:99:99| 1904|\n+-------------------+-----+\n\n</div>",
+       "datasetInfos": [],
+       "metadata": {},
+       "removedWidgets": [],
+       "type": "html"
+      }
+     },
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# (2) Drop the first_name and last_name columns from the DataFrame\n",
+    "df_user = df_user.drop('first_name', 'last_name')\n",
+    "\n",
+    "# (3) Convert the date_joined column from a string to a timestamp data type\n",
+    "# Start by looking for patterns in the date_joined field\n",
+    "df_user.groupBy(F.regexp_replace('date_joined', '[0-9]', '9').alias('date_joined')).count().show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "af04aede-e80a-4631-a4ef-e59826f32fae",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/html": [
+       "<style scoped>\n",
+       "  .ansiout {\n",
+       "    display: block;\n",
+       "    unicode-bidi: embed;\n",
+       "    white-space: pre-wrap;\n",
+       "    word-wrap: break-word;\n",
+       "    word-break: break-all;\n",
+       "    font-family: \"Menlo\", \"Monaco\", \"Consolas\", \"Ubuntu Mono\", \"Source Code Pro\", monospace;\n",
+       "    font-size: 13px;\n",
+       "    color: #555;\n",
+       "    margin-left: 4px;\n",
+       "    line-height: 19px;\n",
+       "  }\n",
+       "</style>\n",
+       "<div class=\"ansiout\"></div>"
+      ]
+     },
+     "metadata": {
+      "application/vnd.databricks.v1+output": {
+       "addedWidgets": {},
+       "arguments": {},
+       "data": "<div class=\"ansiout\"></div>",
+       "datasetInfos": [],
+       "metadata": {},
+       "removedWidgets": [],
+       "type": "html"
+      }
+     },
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# All values are in a consistent format. Convert using sql.functions.to_timestamp\n",
+    "df_user = df_user.withColumn('date_joined', F.to_timestamp('date_joined'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "79080751-5891-47d0-a24c-4682c818f99a",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/html": [
+       "<style scoped>\n",
+       "  .ansiout {\n",
+       "    display: block;\n",
+       "    unicode-bidi: embed;\n",
+       "    white-space: pre-wrap;\n",
+       "    word-wrap: break-word;\n",
+       "    word-break: break-all;\n",
+       "    font-family: \"Menlo\", \"Monaco\", \"Consolas\", \"Ubuntu Mono\", \"Source Code Pro\", monospace;\n",
+       "    font-size: 13px;\n",
+       "    color: #555;\n",
+       "    margin-left: 4px;\n",
+       "    line-height: 19px;\n",
+       "  }\n",
+       "</style>\n",
+       "<div class=\"ansiout\">root\n",
+       "-- ind: long (nullable = true)\n",
+       "-- user_name: string (nullable = false)\n",
+       "-- age: long (nullable = true)\n",
+       "-- date_joined: timestamp (nullable = true)\n",
+       "\n",
+       "</div>"
+      ]
+     },
+     "metadata": {
+      "application/vnd.databricks.v1+output": {
+       "addedWidgets": {},
+       "arguments": {},
+       "data": "<div class=\"ansiout\">root\n |-- ind: long (nullable = true)\n |-- user_name: string (nullable = false)\n |-- age: long (nullable = true)\n |-- date_joined: timestamp (nullable = true)\n\n</div>",
+       "datasetInfos": [],
+       "metadata": {},
+       "removedWidgets": [],
+       "type": "html"
+      }
+     },
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# (4) Reorder columns.\n",
+    "df_user = df_user.select('ind', 'user_name', 'age', 'date_joined')\n",
+    "df_user.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "04747efe-6ec6-42fc-96e7-72250cb71c46",
      "showTitle": false,
      "title": ""
     }
