Fixes NameError in read_and_analyse.ipynb

--- a/read_and_analyse.ipynb
+++ b/read_and_analyse.ipynb
@@ -57,7 +57,7 @@
     "Load Pinterest data from S3; clean and analyse the data with PySpark.\n",
     "This code is intended to run in a Databricks notebook.\n",
     "Author: Kristina Gorkovskaya\n",
-    "Date: 2023-11-03\n",
+    "Date: 2023-11-09\n",
     "'''\n",
     "\n",
     "import pandas as pd\n",
@@ -199,16 +199,14 @@
        "    line-height: 19px;\n",
        "  }\n",
        "</style>\n",
-       "<div class=\"ansiout\">{&#39;category&#39;: 0, &#39;description&#39;: 0, &#39;downloaded&#39;: 0, &#39;follower_count&#39;: 0, &#39;image_src&#39;: 0, &#39;index&#39;: 0, &#39;is_image_or_video&#39;: 0, &#39;poster_name&#39;: 0, &#39;save_location&#39;: 0, &#39;tag_list&#39;: 0, &#39;title&#39;: 0, &#39;unique_id&#39;: 0}\n",
-       "{&#39;category&#39;: 0, &#39;description&#39;: 0, &#39;downloaded&#39;: 0, &#39;follower_count&#39;: 0, &#39;image_src&#39;: 0, &#39;index&#39;: 0, &#39;is_image_or_video&#39;: 0, &#39;poster_name&#39;: 0, &#39;save_location&#39;: 0, &#39;tag_list&#39;: 0, &#39;title&#39;: 1, &#39;unique_id&#39;: 0}\n",
-       "</div>"
+       "<div class=\"ansiout\"></div>"
       ]
      },
      "metadata": {
       "application/vnd.databricks.v1+output": {
        "addedWidgets": {},
        "arguments": {},
-       "data": "<div class=\"ansiout\">{&#39;category&#39;: 0, &#39;description&#39;: 0, &#39;downloaded&#39;: 0, &#39;follower_count&#39;: 0, &#39;image_src&#39;: 0, &#39;index&#39;: 0, &#39;is_image_or_video&#39;: 0, &#39;poster_name&#39;: 0, &#39;save_location&#39;: 0, &#39;tag_list&#39;: 0, &#39;title&#39;: 0, &#39;unique_id&#39;: 0}\n{&#39;category&#39;: 0, &#39;description&#39;: 0, &#39;downloaded&#39;: 0, &#39;follower_count&#39;: 0, &#39;image_src&#39;: 0, &#39;index&#39;: 0, &#39;is_image_or_video&#39;: 0, &#39;poster_name&#39;: 0, &#39;save_location&#39;: 0, &#39;tag_list&#39;: 0, &#39;title&#39;: 1, &#39;unique_id&#39;: 0}\n</div>",
+       "data": "<div class=\"ansiout\"></div>",
        "datasetInfos": [],
        "metadata": {},
        "removedWidgets": [],
@@ -219,17 +217,8 @@
     }
    ],
    "source": [
-    "# (1) Replace empty entries and entries with no relevant data in each column with Nones\n",
-    "# Start by counting nulls\n",
-    "nulls = {col: df_pin.filter((df_pin[col].isNull()) | F.isnan(col)).count() for col in df_pin.columns}\n",
-    "print(nulls)\n",
-    "\n",
     "# Replace nans and empty strings with None\n",
-    "df_pin = df_pin.replace(float('nan'), None).replace(\"\", None)\n",
-    "\n",
-    "# Count nulls again\n",
-    "nulls = {col: df_pin.filter((df_pin[col].isNull()) | F.isnan(col)).count() for col in df_pin.columns}\n",
-    "print(nulls)"
+    "df_pin = df_pin.replace(float('nan'), None).replace(\"\", None)"
    ]
   },
   {
@@ -408,20 +397,19 @@
        "follower_count |follower_count_numeric|\n",
        "+---------------+----------------------+\n",
        "User Info Error|null                  |\n",
-       "7              |7                     |\n",
-       "18             |18                    |\n",
-       "301            |301                   |\n",
-       "760            |760                   |\n",
+       "13             |13                    |\n",
+       "293            |293                   |\n",
+       "771            |771                   |\n",
        "838            |838                   |\n",
+       "873            |873                   |\n",
        "1k             |1000                  |\n",
-       "8k             |8000                  |\n",
-       "18k            |18000                 |\n",
-       "275k           |275000                |\n",
-       "942k           |942000                |\n",
-       "1M             |1000000               |\n",
+       "2k             |2000                  |\n",
+       "72k            |72000                 |\n",
+       "74k            |74000                 |\n",
+       "98k            |98000                 |\n",
        "2M             |2000000               |\n",
        "3M             |3000000               |\n",
-       "8M             |8000000               |\n",
+       "5M             |5000000               |\n",
        "+---------------+----------------------+\n",
        "\n",
        "</div>"
@@ -431,7 +419,7 @@
       "application/vnd.databricks.v1+output": {
        "addedWidgets": {},
        "arguments": {},
-       "data": "<div class=\"ansiout\">+---------------+----------------------+\n|follower_count |follower_count_numeric|\n+---------------+----------------------+\n|User Info Error|null                  |\n|7              |7                     |\n|18             |18                    |\n|301            |301                   |\n|760            |760                   |\n|838            |838                   |\n|1k             |1000                  |\n|8k             |8000                  |\n|18k            |18000                 |\n|275k           |275000                |\n|942k           |942000                |\n|1M             |1000000               |\n|2M             |2000000               |\n|3M             |3000000               |\n|8M             |8000000               |\n+---------------+----------------------+\n\n</div>",
+       "data": "<div class=\"ansiout\">+---------------+----------------------+\n|follower_count |follower_count_numeric|\n+---------------+----------------------+\n|User Info Error|null                  |\n|13             |13                    |\n|293            |293                   |\n|771            |771                   |\n|838            |838                   |\n|873            |873                   |\n|1k             |1000                  |\n|2k             |2000                  |\n|72k            |72000                 |\n|74k            |74000                 |\n|98k            |98000                 |\n|2M             |2000000               |\n|3M             |3000000               |\n|5M             |5000000               |\n+---------------+----------------------+\n\n</div>",
        "datasetInfos": [],
        "metadata": {},
        "removedWidgets": [],
@@ -2025,7 +2013,7 @@
     "top_user_by_country.show()\n",
     "\n",
     "# Now find the country with the top follower count\n",
-    "max_follower_count = top_user_per_country.groupBy().max('follower_count').collect()[0].asDict()['max(follower_count)']\n",
+    "max_follower_count = top_user_by_country.groupBy().max('follower_count').collect()[0].asDict()['max(follower_count)']\n",
     "top_country_by_follower_count = top_user_by_country.where(F.col('follower_count') == max_follower_count).drop('poster_name')\n",
     "top_country_by_follower_count.show()"
    ]
