Updates databricks notebooks with optimisations and cosmetic changes

--- a/databricks/analyse_pinterest_data_streaming.ipynb
+++ b/databricks/analyse_pinterest_data_streaming.ipynb
@@ -57,13 +57,14 @@
     "Stream Pinterest data from Kinesis; clean and analyse the data with PySpark.\n",
     "This code is intended to run in a Databricks notebook.\n",
     "Author: Kristina Gorkovskaya\n",
-    "Date: 2023-11-11\n",
+    "Date: 2023-11-24\n",
     "'''\n",
     "\n",
     "from pyspark.sql.types import *\n",
     "from pyspark.sql.functions import *\n",
     "import pyspark\n",
     "import tempfile\n",
+    "import urllib\n",
     "\n",
     "# Replace with your AWS IAM user id\n",
     "user_id ='0ec858bf1407'\n",
@@ -72,16 +73,25 @@
     "file_type = \"csv\"\n",
     "first_row_is_header = \"true\"\n",
     "delimiter = \",\"\n",
-    "aws_keys_df = spark.read.format(file_type).option(\"header\", first_row_is_header).option(\"sep\", delimiter).load(\"/FileStore/tables/authentication_credentials.csv\")\n",
+    "aws_keys_df = spark.read.format(file_type) \\\n",
+    "  .option(\"header\", first_row_is_header) \\\n",
+    "  .option(\"sep\", delimiter) \\\n",
+    "  .load(\"/FileStore/tables/authentication_credentials.csv\")\n",
     "\n",
     "# Get the AWS access key and secret key from the spark dataframe\n",
-    "ACCESS_KEY = aws_keys_df.where(col('User name')=='databricks-user').select('Access key ID').collect()[0]['Access key ID']\n",
-    "SECRET_KEY = aws_keys_df.where(col('User name')=='databricks-user').select('Secret access key').collect()[0]['Secret access key']\n",
+    "ACCESS_KEY = aws_keys_df \\\n",
+    "  .where(col('User name')=='databricks-user') \\\n",
+    "  .select('Access key ID') \\\n",
+    "  .collect()[0]['Access key ID']\n",
+    "SECRET_KEY = aws_keys_df \\\n",
+    "  .where(col('User name')=='databricks-user') \\\n",
+    "  .select('Secret access key') \\\n",
+    "  .collect()[0]['Secret access key']\n",
     "\n",
     "# Encode the secret key; safe=\"\" means every char will be encoded\n",
     "ENCODED_SECRET_KEY = urllib.parse.quote(string=SECRET_KEY, safe=\"\")\n",
     "\n",
-    "def read_stream(stream_name_suffix) -> pyspark.sql.dataframe.DataFrame:\n",
+    "def read_stream(stream_name_suffix: str) -> pyspark.sql.dataframe.DataFrame:\n",
     "  '''Read Kinesis stream.'''\n",
     "\n",
     "  stream_name = f'streaming-{user_id}-{stream_name_suffix}'\n",
@@ -97,7 +107,7 @@
     "    .load()\n",
     "  return df\n",
     "\n",
-    "def parse_stream(stream_name_suffix) -> pyspark.sql.dataframe.DataFrame:\n",
+    "def parse_stream(stream_name_suffix: str) -> pyspark.sql.dataframe.DataFrame:\n",
     "  '''Read Kinesis stream and apply a schema to parse JSON data to create one column per attribute.'''\n",
     "  df = read_stream(stream_name_suffix)\n",
     "  schemas = {\n",
@@ -201,14 +211,14 @@
     "# Create a multiplier column\n",
     "# Assumptions: a suffix of \"k\" in follower_count means a multiplier of 1,000; a suffix of \"M\" means 10^6\n",
     "df_pin = df_pin.withColumn('follower_count_multiplier', \n",
-    "                           F.when(df_pin.follower_count.like('%k'), 1000).\n",
+    "                           when(df_pin.follower_count.like('%k'), 1000).\n",
     "                           when(df_pin.follower_count.like('%M'), 1000000).\n",
     "                           otherwise(1))\n",
     "\n",
     "# Parse numeric data from follower_count and apply multiplier to the parsed values\n",
     "df_pin = df_pin.withColumn('follower_count_numeric',\n",
-    "                           F.when(df_pin.follower_count == 'User Info Error', None).\n",
-    "                           otherwise(F.regexp_replace('follower_count', '[^0-9]+', '')).\n",
+    "                           when(df_pin.follower_count == 'User Info Error', None).\n",
+    "                           otherwise(regexp_replace('follower_count', '[^0-9]+', '')).\n",
     "                           cast(IntegerType()) * df_pin.follower_count_multiplier)\n",
     "\n",
     "# Remove intermediate columns\n",
@@ -217,11 +227,11 @@
     "\n",
     "# (3) Ensure that each column containing numeric data has a numeric data type\n",
     "numeric_cols = ['downloaded', 'index']\n",
-    "for col in numeric_cols:\n",
-    "    df_pin = df_pin.withColumn(col, df_pin[col].cast(IntegerType()))\n",
+    "for c in numeric_cols:\n",
+    "    df_pin = df_pin.withColumn(c, df_pin[c].cast(IntegerType()))\n",
     "\n",
     "# (4) Clean the data in the save_location column to include only the save location path\n",
-    "df_pin = df_pin.withColumn('save_location', F.regexp_replace('save_location', 'Local save in ', ''))\n",
+    "df_pin = df_pin.withColumn('save_location', regexp_replace('save_location', 'Local save in ', ''))\n",
     "\n",
     "# (5) Rename the index column to ind, and reorder the columns.\n",
     "cols = [    \n",
@@ -300,20 +310,13 @@
     "df_geo = parse_stream('geo')\n",
     "\n",
     "# (1) Create a new column coordinates that contains an array based on the latitude and longitude columns\n",
-    "# Start by defining a UDF that takes multiple columns and returns an array.\n",
-    "def make_list(*args):\n",
-    "    return list(args)\n",
-    "\n",
-    "udf_make_list = F.udf(make_list, ArrayType(DoubleType()))\n",
-    "\n",
-    "# Then apply the UDF to latitude and longitude\n",
-    "df_geo = df_geo.withColumn('coordinates', udf_make_list('latitude', 'longitude'))\n",
+    "df_geo = df_geo.withColumn('coordinates', array('latitude', 'longitude'))\n",
     "\n",
     "# (2) Drop the latitude and longitude columns from the DataFrame\n",
     "df_geo = df_geo.drop('latitude', 'longitude')\n",
     "\n",
     "# (3) Convert the timestamp column from a string to a timestamp data type\n",
-    "df_geo = df_geo.withColumn('timestamp', F.to_timestamp('timestamp'))\n",
+    "df_geo = df_geo.withColumn('timestamp', to_timestamp('timestamp'))\n",
     "\n",
     "# (4) Reorder columns\n",
     "df_geo = df_geo.select('ind', 'country', 'coordinates', 'timestamp')"
@@ -380,13 +383,13 @@
     "\n",
     "# (1) Create a new column user_name that concatenates the information found in the first_name and last_name columns.\n",
     "# Trim and normalize whitespace.\n",
-    "df_user = df_user.withColumn('user_name', F.regexp_replace(F.trim(F.concat_ws(' ', 'first_name', 'last_name')), '\\s+', ' '))\n",
+    "df_user = df_user.withColumn('user_name', regexp_replace(trim(concat_ws(' ', 'first_name', 'last_name')), '\\s+', ' '))\n",
     "\n",
     "# (2) Drop the first_name and last_name columns from the DataFrame\n",
     "df_user = df_user.drop('first_name', 'last_name')\n",
     "\n",
     "# (3) Convert the date_joined column from a string to a timestamp data type\n",
-    "df_user = df_user.withColumn('date_joined', F.to_timestamp('date_joined'))\n",
+    "df_user = df_user.withColumn('date_joined', to_timestamp('date_joined'))\n",
     "\n",
     "# (4) Reorder columns.\n",
     "df_user = df_user.select('ind', 'user_name', 'age', 'date_joined')"
@@ -506,13 +509,17 @@
     }
    ],
    "source": [
-    "with tempfile.TemporaryDirectory() as d:\n",
-    "  df_geo.writeStream \\\n",
-    "    .format('delta') \\\n",
-    "    .outputMode('append') \\\n",
-    "    .option(\"checkpointLocation\", d) \\\n",
-    "    .option(\"startingOffsets\", \"earliest\") \\\n",
-    "    .table(f'{user_id}_geo_table')"
+    "def write_stream(df: pyspark.sql.dataframe.DataFrame, delta_table_name: str) -> None:\n",
+    "  '''Write streaming data to delta table. '''\n",
+    "  with tempfile.TemporaryDirectory() as d:\n",
+    "    df.writeStream \\\n",
+    "      .format('delta') \\\n",
+    "      .outputMode('append') \\\n",
+    "      .option(\"checkpointLocation\", d) \\\n",
+    "      .option(\"startingOffsets\", \"earliest\") \\\n",
+    "      .table(delta_table_name)  \n",
+    "\n",
+    "write_stream(df_geo, f'{user_id}_geo_table')"
    ]
   },
   {
@@ -567,13 +574,7 @@
     }
    ],
    "source": [
-    "with tempfile.TemporaryDirectory() as d:\n",
-    "  df_pin.writeStream \\\n",
-    "    .format('delta') \\\n",
-    "    .outputMode('append') \\\n",
-    "    .option(\"checkpointLocation\", d) \\\n",
-    "    .option(\"startingOffsets\", \"earliest\") \\\n",
-    "    .table(f'{user_id}_pin_table')"
+    "write_stream(df_pin, f'{user_id}_pin_table')"
    ]
   },
   {
@@ -629,13 +630,7 @@
     }
    ],
    "source": [
-    "with tempfile.TemporaryDirectory() as d:\n",
-    "  df_user.writeStream \\\n",
-    "    .format('delta') \\\n",
-    "    .outputMode('append') \\\n",
-    "    .option(\"checkpointLocation\", d) \\\n",
-    "    .option(\"startingOffsets\", 0) \\\n",
-    "    .table(f'{user_id}_user_table')"
+    "write_stream(df_user, f'{user_id}_user_table')"
    ]
   }
  ],
