--- a/databricks/mount_s3_bucket.ipynb
+++ b/databricks/mount_s3_bucket.ipynb
@@ -27,7 +27,7 @@
        "    white-space: pre-wrap;\n",
        "    word-wrap: break-word;\n",
        "    word-break: break-all;\n",
-       "    font-family: \"Source Code Pro\", \"Menlo\", monospace;;\n",
+       "    font-family: \"Menlo\", \"Monaco\", \"Consolas\", \"Ubuntu Mono\", \"Source Code Pro\", monospace;\n",
        "    font-size: 13px;\n",
        "    color: #555;\n",
        "    margin-left: 4px;\n",
@@ -52,6 +52,12 @@
     }
    ],
    "source": [
+    "'''\n",
+    "AiCore Pinterest Data Pipeline Project\n",
+    "Mount S3 bucket to Databricks.\n",
+    "Date: 2023-11-24\n",
+    "'''\n",
+    "\n",
     "from pyspark.sql.functions import *\n",
     "import urllib\n",
     "\n",
@@ -59,11 +65,20 @@
     "first_row_is_header = \"true\"\n",
     "delimiter = \",\"\n",
     "\n",
-    "aws_keys_df = spark.read.format(file_type).option(\"header\", first_row_is_header).option(\"sep\", delimiter).load(\"/FileStore/tables/authentication_credentials.csv\")\n",
+    "aws_keys_df = spark.read.format(file_type) \\\n",
+    "    .option(\"header\", first_row_is_header) \\\n",
+    "    .option(\"sep\", delimiter) \\\n",
+    "    .load(\"/FileStore/tables/authentication_credentials.csv\")\n",
     "\n",
     "# Get the AWS access key and secret key from the spark dataframe\n",
-    "ACCESS_KEY = aws_keys_df.where(col('User name')=='databricks-user').select('Access key ID').collect()[0]['Access key ID']\n",
-    "SECRET_KEY = aws_keys_df.where(col('User name')=='databricks-user').select('Secret access key').collect()[0]['Secret access key']\n",
+    "ACCESS_KEY = aws_keys_df \\\n",
+    "    .where(col('User name')=='databricks-user') \\\n",
+    "    .select('Access key ID') \\\n",
+    "    .collect()[0]['Access key ID']\n",
+    "SECRET_KEY = aws_keys_df \\\n",
+    "    .where(col('User name')=='databricks-user') \\\n",
+    "    .select('Secret access key') \\\n",
+    "    .collect()[0]['Secret access key']\n",
     "\n",
     "# Encode the secret key for security purposes; \n",
     "# safe=\"\" means every char will be encoded\n",
