Moves Spark schemas to separate notebook

--- a/databricks/analyse_pinterest_data_streaming.ipynb
+++ b/databricks/analyse_pinterest_data_streaming.ipynb
@@ -10,7 +10,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "09bf8e23-81f3-4b91-98d5-2e3a9f7e7bfd",
+     "nuid": "b693868d-f603-4d00-92a8-93ca03e85b96",
      "showTitle": false,
      "title": ""
     }
@@ -57,15 +57,122 @@
     "Stream Pinterest data from Kinesis; clean and analyse the data with PySpark.\n",
     "This code is intended to run in a Databricks notebook.\n",
     "Author: Kristina Gorkovskaya\n",
-    "Date: 2023-11-24\n",
+    "Date: 2023-11-28\n",
     "'''\n",
     "\n",
     "from pyspark.sql.types import *\n",
     "from pyspark.sql.functions import *\n",
     "import pyspark\n",
     "import tempfile\n",
-    "import urllib\n",
-    "\n",
+    "import urllib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "c495d3f1-61ed-4181-96e4-000d1a040757",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%run /Users/kristina.gorkovskaya@gmail.com/schemas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "09bf8e23-81f3-4b91-98d5-2e3a9f7e7bfd",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/html": [
+       "<style scoped>\n",
+       "  .ansiout {\n",
+       "    display: block;\n",
+       "    unicode-bidi: embed;\n",
+       "    white-space: pre-wrap;\n",
+       "    word-wrap: break-word;\n",
+       "    word-break: break-all;\n",
+       "    font-family: \"Menlo\", \"Monaco\", \"Consolas\", \"Ubuntu Mono\", \"Source Code Pro\", monospace;\n",
+       "    font-size: 13px;\n",
+       "    color: #555;\n",
+       "    margin-left: 4px;\n",
+       "    line-height: 19px;\n",
+       "  }\n",
+       "</style>\n",
+       "<div class=\"ansiout\"></div>"
+      ]
+     },
+     "metadata": {
+      "application/vnd.databricks.v1+output": {
+       "addedWidgets": {},
+       "arguments": {},
+       "data": "<div class=\"ansiout\"></div>",
+       "datasetInfos": [],
+       "metadata": {},
+       "removedWidgets": [],
+       "type": "html"
+      }
+     },
+     "output_type": "display_data"
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/html": [
+       "<style scoped>\n",
+       "  .ansiout {\n",
+       "    display: block;\n",
+       "    unicode-bidi: embed;\n",
+       "    white-space: pre-wrap;\n",
+       "    word-wrap: break-word;\n",
+       "    word-break: break-all;\n",
+       "    font-family: \"Menlo\", \"Monaco\", \"Consolas\", \"Ubuntu Mono\", \"Source Code Pro\", monospace;\n",
+       "    font-size: 13px;\n",
+       "    color: #555;\n",
+       "    margin-left: 4px;\n",
+       "    line-height: 19px;\n",
+       "  }\n",
+       "</style>\n",
+       "<div class=\"ansiout\"></div>"
+      ]
+     },
+     "metadata": {
+      "application/vnd.databricks.v1+output": {
+       "addedWidgets": {},
+       "arguments": {},
+       "data": "<div class=\"ansiout\"></div>",
+       "datasetInfos": [],
+       "metadata": {},
+       "removedWidgets": [],
+       "type": "html"
+      }
+     },
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
     "# Replace with your AWS IAM user id\n",
     "user_id ='0ec858bf1407'\n",
     "\n",
@@ -107,39 +214,9 @@
     "    .load()\n",
     "  return df\n",
     "\n",
-    "def parse_stream(stream_name_suffix: str) -> pyspark.sql.dataframe.DataFrame:\n",
+    "def parse_stream(stream_name_suffix: str, schemas: list) -> pyspark.sql.dataframe.DataFrame:\n",
     "  '''Read Kinesis stream and apply a schema to parse JSON data to create one column per attribute.'''\n",
     "  df = read_stream(stream_name_suffix)\n",
-    "  schemas = {\n",
-    "    'pin': StructType([\n",
-    "      StructField('category', StringType(), True),\n",
-    "      StructField('description', StringType(), True),\n",
-    "      StructField('downloaded', StringType(), True),\n",
-    "      StructField('follower_count', StringType(), True),\n",
-    "      StructField('image_src', StringType(), True),\n",
-    "      StructField('index', StringType(), True),\n",
-    "      StructField('is_image_or_video', StringType(), True),\n",
-    "      StructField('poster_name', StringType(), True),\n",
-    "      StructField('save_location', StringType(), True),\n",
-    "      StructField('tag_list', StringType(), True),\n",
-    "      StructField('title', StringType(), True),\n",
-    "      StructField('unique_id', StringType(), True)\n",
-    "    ]),\n",
-    "    'geo': StructType([\n",
-    "      StructField('country', StringType(), True), \n",
-    "      StructField('ind', StringType(), True), \n",
-    "      StructField('latitude', DoubleType(), True), \n",
-    "      StructField('longitude', DoubleType(), True), \n",
-    "      StructField('timestamp', StringType(), True)\n",
-    "    ]),\n",
-    "    'user': StructType([\n",
-    "      StructField('age', StringType(), True), \n",
-    "      StructField('date_joined', StringType(), True), \n",
-    "      StructField('first_name', StringType(), True), \n",
-    "      StructField('ind', StringType(), True), \n",
-    "      StructField('last_name', StringType(), True)\n",
-    "    ])\n",
-    "  }\n",
     "  schema = schemas[stream_name_suffix]\n",
     "  df = df.selectExpr(\"cast (data as STRING) my_json_data\").select(from_json(\"my_json_data\", schema).alias(\"tmp\")).select(\"tmp.*\")\n",
     "  return df"
@@ -202,7 +279,7 @@
     "# TASK 1: Clean the df_pin DataFrame\n",
     "#############################################################################################################\n",
     "\n",
-    "df_pin = parse_stream('pin')\n",
+    "df_pin = parse_stream('pin', schemas)\n",
     "\n",
     "# (1) Replace nans and empty strings with None\n",
     "df_pin = df_pin.replace(float('nan'), None).replace(\"\", None)\n",
@@ -307,7 +384,7 @@
     "# TASK 2: Clean the df_geo (geolocation) DataFrame\n",
     "#############################################################################################################\n",
     "\n",
-    "df_geo = parse_stream('geo')\n",
+    "df_geo = parse_stream('geo', schemas)\n",
     "\n",
     "# (1) Create a new column coordinates that contains an array based on the latitude and longitude columns\n",
     "df_geo = df_geo.withColumn('coordinates', array('latitude', 'longitude'))\n",
@@ -379,7 +456,7 @@
     "# TASK 3: Clean the df_user DataFrame\n",
     "#############################################################################################################\n",
     "\n",
-    "df_user = parse_stream('user')\n",
+    "df_user = parse_stream('user', schemas)\n",
     "\n",
     "# (1) Create a new column user_name that concatenates the information found in the first_name and last_name columns.\n",
     "# Trim and normalize whitespace.\n",
